fix: reporterId bases on current logged in user
